# telegram-file-statistics-bot

./: .dockerignore  .gitignore  .pylintrc  .releaserc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.in  requirements.txt
.github/: pull_request_template.md
.github/workflows/: build_pr.yml  nightly-build.yml  open_pr.yml  pylint.yml  pytest.yml  release.yml  unit-tests.yml
api/: README.md  docker-compose.yml
bot/: __init__.py  archive_utils.py  args.py  database.py  handlers.py  helper.py
locales/it/LC_MESSAGES/: base.po
src/telegram_file_statistics_bot/: __init__.py  __main__.py  archive_utils.py  args.py  database.py  handlers.py  helper.py
telegram-file-statistics-bot/: __init__.py  __main__.py  database.py  handlers.py
tests/: test__init__.py  test__main__.py  test_archive_utils.py  test_archive_utils_ignore.py  test_args.py  test_database.py  test_handlers.py  test_helper.py  test_ignore_extensions.py
