[project]
name = "telegram-file-statistics-bot"
version = "1.1.0"
description = "A Telegram bot that provides statistics about files and archives."
authors = [
    {name = "Francesco146"},
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "python-telegram-bot==21.9",
    "humanize==4.11.0",
    "python-dotenv==1.0.1",
    "argparse==1.4.0",
]